Nicolas_Tafur/log/build_2025-09-03_08-23-48/robot/stderr.log
  File "/home/tombe/Robotica/Robotica-UAO-2025-3/Nicolas_Tafur/install/robot/lib/python3.10/site-packages/robot/pinterfaz.py", line 457
    else
        ^
SyntaxError: expected ':'

